# old-code

./: README  monodoc.in
acceptance-tests-ifolder/monoskel/: ChangeLog  Makefile.am  autogen.sh  configure.ac  monoskel.in
acceptance-tests-ifolder/monoskel-lib/: AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.ac  superstring-sharp.pc.in
cocoa-sharp/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  README.notes  acinclude.m4  autogen.sh  cocoa-sharp.pc.in  cocoa-sharp.snk  configure.in  ltmain.sh
cocoa-sharp/generator/: .cvsignore  ChangeLog  Generator.cs  Makefile.am  ObjCManagedExport.csproj  Stub.cs  generator.xml  genstubs.pl  mapping.xml  typeConversion.pl  typeconversion.xml
cocoa-sharp/monodoc/: .cvsignore  Makefile.am  browser.cs  catalog.cs  monodoc.plist
cocoa-sharp/sample/: Makefile  NSViewSample.cs  OpenGLViewSample.cs
cocoa-sharp/src/: Makefile.am
cocoa-sharp/test/: .cvsignore  t-0001.cs
dbus-sharp/: .cvsignore  ChangeLog  MAINTAINERS  Makefile.am  README  autogen.sh  configure.in  dbus-sharp.pc.in  sources.xml
dbus-sharp/dbus/: .cvsignore  Makefile.in  dbus-api.xml
entagged-sharp/: AUTHORS  COPYING  ChangeLog  DEPRECATED  INSTALL  Makefile.am  NEWS  README  autogen.sh  configure.ac  entagged-sharp.mdp  entagged-sharp.mds  entagged-sharp.pc.in  vacuum.sh
entagged-sharp/src/: AssemblyInfo.cs  AudioFile.cs  AudioFileContainer.cs  AudioFileIO.cs  CreativeCommons.cs  EncodingInfo.cs  EntaggedTest.cs  Makefile.am  Tag.cs  extract-mime-types.sh
entagged-sharp/tests/: EntaggedTest.cs  Makefile.am
gst-sharp/: .cvsignore  AUTHORS  ChangeLog  HACKING  Makefile.am  README  configure.in  gst-sharp.pc.in  gst-sharp.spec.in  makefile.win32
gst-sharp/doc/: .cvsignore  Makefile.am  gst-sharp-docs.source
gst-sharp/gst-sharp/: .cvsignore  Application.cs  AssemblyInfo.cs.in  Bin.custom  Element.custom  Gst.metadata  Makefile.am  gst-api.raw  gst-sharp.pc.in
gst-sharp/sample/: Makefile.am  Metadata.cs  Mixer.cs  PlayMp3.cs  Player.cs  Spider.cs
gst-sharp/source/: .cvsignore  Makefile.am  README  gst-plugins-parse.patch  gst-sharp-source.xml  gstreamer-parse.patch
guile-mono/mono/: .cvsignore  Makefile.am  Makefile.in  MonoGuile.cs  Test.cs  guile-mono-module.c  guile-mono-module.h  guile-mono.gwp  marshal.patch  mono.scm  test.scm
mbuild/: .cvsignore  Buildfile  Buildfile.config  ChangeLog  Frameworks.AutoheaderCompat.bundle  Frameworks.Gettext.bundle  Frameworks.Intltool.bundle  INSTALL  Languages.CSharp.bundle  Languages.CrappyC.bundle  MBuildDynamic.Core.dll.sources  Makefile.in  Monkeywrench.dll.sources  Mono.Build.dll.sources  NEWS  README  TODO  Tools.Bundlegen.bundle  Tools.GLibGenmarshal.bundle  Tools.Jay.bundle  Tools.Monodoc.bundle  Tools.PkgConfig.bundle  autogen.sh  configure.ac  mbuild.exe.sources  mbuild.snk  prefix-config.xml.in
mbuild/MBuildDynamic.Core/: ArchCanonicalize.cs  ArchDetect.cs  ChangeLog  Core.Clr.bundle  Core.Config.bundle  Core.Install.bundle  Core.Native.bundle  Core.Subst.bundle  Core.Tools.bundle  Core.Xml.bundle  Core.bundle
mbuild/Monkeywrench/: ChangeLog
mbuild/Mono.Build/: ChangeLog
mbuild/api-docs/: .cvsignore  Buildfile  ChangeLog  MBuildDynamic.Core.sources  Makefile  mbuild-Monkeywrench.sources  mbuild-Mono.Build.sources  mbuild-handbook.sources  mbuild.source-tmpl.xml  mbuild.source.manual  mkmstoc.xsl
mbuild/doc/: Buildfile  ChangeLog  binary-graph-format.txt  error-codes.txt  special-tags.txt
mbuild/mb-bd2xhtml/: AssemblyInfo.cs  Buildfile  ChangeLog  bd2xhtml.xsl  mb-bd2xhtml.cs  mb-bd2xhtml.exe.sources
mbuild/mb-bundledoc/: AssemblyInfo.cs  Buildfile  BundleDocumenter.cs  ChangeLog  DeprecatingSynchronizer.cs  TypeDocumenter.cs  XmlSynchronizer.cs  documenters.cs  mb-bundledoc.cs  mb-bundledoc.exe.sources  synchronizers.cs
mbuild/mb-bundlegen/: .cvsignore  ArgCount.cs  AssemblyInfo.cs  BGProviderBuilder.cs  BGTargetBuilder.cs  Buildfile  ChangeLog  CodeDomHelpers.cs  Driver.cs  EmittingInfoHolder.cs  EnumResultBuilder.cs  ExistingNamespaceParams.cs  FingerprintHelper.cs  INamespaceParams.cs  MatcherBuilder.cs  MetaRuleBuilder.cs  NamespaceBuilder.cs  NativeCode.cs  Parser-rest.cs  Parser.jay  ResultBuilder.cs  RuleArgConversion.cs  RuleBuilder.cs  RuleTemplateBuilder.cs  SourcefileRuleBuilder.cs  StructureBoundItem.cs  StructureBuilder.cs  StructureElement.cs  TemplateBuilder.cs  Tokenizer.cs  TypeExpressedItem.cs  TypeResolveContext.cs  UserType.cs  mb-bundlegen.cs  mb-bundlegen.exe.sources
mbuild/mb-gtkconfig/: AssemblyInfo.cs  Buildfile  ChangeLog  mb-gtkconfig.cs  mb-gtkconfig.exe.sources  mb-gtkconfig.glade
mbuild/mb-import/: AssemblyInfo.cs  Buildfile  CompatName.cs.in  mb-import.cs  mb-import.exe.sources
mbuild/mb-install-client-src/: Buildfile  ChangeLog  mb-install-client.cs  mb-install-client.exe.sources
mbuild/mbuild/: .cvsignore  AssemblyInfo.cs  BuildContextProxy.cs  BuildLoggerProxy.cs  ChangeLog  InstallerServiceNotify.cs  WarningLoggerProxy.cs  mbuild.cs
mbuild/resources/: ChangeLog  c-check-template.c.in  csharp-check-template.cs.in
mbuild/scripts/: Buildfile  ChangeLog  mb-gtkconfig.in  mbuild.in  tmpl.in
mbuild/test/: Buildfile  ChangeLog  mb-configsub.cs  mb-graphstat.cs  test-canon.cs
monodoc/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  configure.in
monodoc/class/: Makefile.am  Mono.GetOptions.source
monodoc/doctools/: Makefile.defs
monodoc/engine/: .cvsignore  AssemblyInfo.cs.in  ChangeLog  NOTES  TODO  cs2ecma.cs  render.cs
monodoc/extras/: Makefile.am
monodoc/generator/: .cvsignore  ChangeLog  Makefile.am  (+1 more)
mwn/: AUTHORS  Archiver.cs  Makefile  Makefile.am  README  Ripper.cs  TODO  archeader  archives.html  contact  contributors  cvsspy  guicontributor.cs  header  interheader  interviewgen.sh  modules.list  monocvsspy.cs  mwn.css  mwncontributor.cs  mwnripper.cs  template.html  ui.glade
objc-sharp/: autogen.sh  configure.in
scripts/: Makefile.am  mdassembler.in  mdcs2ecma.in  monodocs2slashdoc.in
sqlsharpgtk/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  TODO  autogen.sh  configure.ac  sqlsharpgtk.sh.in
(+2951 files in other folders)
