#
#  configure.in
#
#  Authors
#    - C.J. Collier, Collier Technologies, <cjcollier@colliertech.org>
#    - Urs C. Muff, Quark Inc., <umuff@quark.com>
#    - Kangaroo, Geoff Norton
#    - Adham Findlay
#
#  Copyright (c) 2004 Quark Inc. and Collier Technologies.  All rights reserved.
#
#	$Header: /home/miguel/third-conversion/public/cocoa-sharp/configure.in,v 1.15 2004/08/13 20:15:02 adhamh Exp $
#

AC_INIT(README)
AC_CANONICAL_SYSTEM
AC_PROG_LIBTOOL
AM_INIT_AUTOMAKE(cocoa-sharp, 0.3)
AM_MAINTAINER_MODE
dnl Make Objective-C work with automake 1.7.x
AM_CONDITIONAL([am__fastdepOBJC], false)

dnl Defines CC to avoid warnings
AC_PROG_INSTALL
dnl AC_PROG_OBJC doesn't seem to exist, this is the workaround
AC_MSG_CHECKING(for an Objective-C compiler)
OBJC="$CC"
AC_SUBST(OBJC)
OBJCFLAGS="$CFLAGS -x objective-c"
AC_SUBST(OBJCFLAGS)
dnl _AM_DEPENDENCIES(OBJC) doesn't work, so hard code OBJCDEPMODE here
dnl _AM_DEPENDENCIES(OBJC)
dnl Of course, hard coding doesn't work for some versions of automake
OBJCDEPMODE="depmode=gcc"
AC_SUBST(OBJCDEPMODE)
AC_PREFIX_DEFAULT(/Library/Frameworks/Mono.framework/Versions/Current)
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR(['pkg-config' is not in your PATH.])
fi

AC_PATH_PROG(MONO, mono, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR(['mono' is not in your PATH.])
fi
AC_SUBST(MONO)

PKG_CHECK_MODULES(MONO, mono >= 1.1.4)
AC_SUBST(MONO_CFLAGS)
AC_SUBST(MONO_LIBS)

PKG_CHECK_MODULES(MONO_DEPENDENCY, mono, has_mono=true, has_mono=false)
MONO_PREFIX=`pkg-config --variable=prefix mono`
AC_SUBST(MONO_PREFIX)

if test "x$has_mono" = "xtrue"; then
if test `uname -s` = "Darwin"; then
    AC_PATH_PROG(RUNTIME, mint, no)
    AC_PATH_PROG(CSC, mcs, no)
    LIB_PREFIX=
    LIB_SUFFIX=.dylib
else
    AC_PATH_PROG(RUNTIME, mono, no)
    AC_PATH_PROG(CSC, mcs, no)
    LIB_PREFIX=.so
    LIB_SUFFIX=
fi
else
    AC_MSG_ERROR([You need to install mono])
fi

GACUTIL_FLAGS='/package $(PACKAGE) /gacdir $(libdir)'
AC_SUBST(GACUTIL_FLAGS)
AC_PATH_PROG(GACUTIL, gacutil, no)
if test "x$GACUTIL" = "xno" ; then
        AC_MSG_ERROR([No gacutil tool found])
fi

OBJC="gcc"
CS="C#"
if test "x$CSC" = "xno" ; then
    AC_MSG_ERROR([No $CS compiler found])
fi

AC_SUBST(RUNTIME)
AC_SUBST(CSC)
AC_SUBST(LIB_PREFIX)
AC_SUBST(LIB_SUFFIX)

PKG_CHECK_MODULES(GLIB2, glib-2.0 >= 2.2.3)
GLIB2_PREFIX=`pkg-config --variable=prefix glib-2.0`
AC_SUBST(GLIB2_PREFIX)
AC_SUBST(GLIB2_CFLAGS)

API_VERSION=1.0.0.0
AC_SUBST(API_VERSION)

AC_OUTPUT([
cocoa-sharp.pc
Makefile
generator/Makefile
src/Makefile
src/CocoaSharp.Glue/Makefile
src/CocoaSharp.Loader/Makefile
src/Apple.Foundation/Makefile
src/Apple.AppKit/Makefile
src/Apple.WebKit/Makefile
src/Apple.Foundation/AssemblyInfo.cs
src/Apple.AppKit/AssemblyInfo.cs
src/Apple.WebKit/AssemblyInfo.cs
])

#***************************************************************************
#
# $Log: configure.in,v $
# Revision 1.15  2004/08/13 20:15:02  adhamh
# added support for default prefix
#
# Revision 1.14  2004/08/12 17:22:25  gnorton
# Fix .pc to work with our new gac location
#
# Revision 1.13  2004/08/11 15:34:15  gnorton
# Bump to 0.1.1 and tag for our distcheck release of 0.1
#
# Revision 1.12  2004/08/10 19:15:18  gnorton
# auto* cleanup
#
# Revision 1.11  2004/08/10 19:04:21  gnorton
# auto* build system redone
#
# Revision 1.10  2004/07/28 17:10:58  gnorton
# Add cocoa-sharp.pc to make things easier for pkg-config folks (mcs -pkg:cocoa-sharp) works now.
#
# Revision 1.9  2004/07/28 16:58:16  gnorton
# Build system updates so that we have the ability to actually install
# (no gac for now)
#
# Revision 1.8  2004/07/02 14:34:58  urs
# Bump version of mono dep to 1.0
#
# Revision 1.7  2004/07/02 13:29:30  urs
# Cleanup build process again, and checkin bin's for monodoc (as temp solution)
#
# Revision 1.6  2004/07/01 20:48:30  gnorton
# Make system reorg/cleanup
#
# Revision 1.5  2004/06/30 19:29:22  urs
# Cleanup
#
# Revision 1.4  2004/06/23 18:24:39  gnorton
# Directory movment & auto* updates.
#
# Revision 1.3  2004/06/16 12:20:26  urs
# Add CVS headers comments, authors and Copyright info, feel free to add your name or change what is appropriate
#
#***************************************************************************
