AC_INIT(README)
AC_CANONICAL_SYSTEM
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(dbus-sharp, 0.1)
AM_MAINTAINER_MODE

AC_PROG_INSTALL

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR([You need to install pkg-config])
fi

PKG_CHECK_MODULES(BASE_DEPENDENCIES, dbus-glib-1)

PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp >= 0.16)

AC_PATH_PROG(GAPI_CODEGEN, gapi-codegen, no)
if test "x$GAPI_CODEGEN" = "xno"; then
	AC_MSG_ERROR([You need to install gtk-sharp-gapi])
fi

AC_PATH_PROG(GAPI_FIXUP, gapi-fixup, no)
if test "x$GAPI_FIXUP" = "xno"; then
	AC_MSG_ERROR([You need to install gtk-sharp-gapi])
fi

AC_OUTPUT([
dbus/Makefile
dbus-sharp.pc
Makefile
])

echo "---"
echo "Configuration successful."
echo "---"

